src/test/deca/context/invalid/methodLValue.deca
class A {
    float x;

    float getX() {
        return x;
    }
}

{
    A a = new A();
    a.getX() = 13.0;
}
//ERROR :11: